kubernetes/apps/doublons/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: doublons
  labels:
    pod-security.kubernetes.io/enforce: restricted
