kubernetes/apps/doublons/network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-cloudflare-tunnel
  namespace: doublons
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: doublons
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cloudflare-tunnel
      ports:
        - { protocol: TCP, port: 3000 }
